# ComfyUI-Easy-Media

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  README.md  README_CN.md  TODO.md  __init__.py  config.yaml.example  pyproject.toml  routes.py
.husky/: commit-msg  pre-commit
example_workflows/: Bernini Edit with MultiTrack.json  Bernini R2V or RV2V with MultiTrack.json  Bernini S2V 1voice with Multitrack.json  Bernini S2V 2voice with Multitrack.json  LTX2.3 3DLora with Multitrack.json  LTX2.3 LoopSegment with TimelineEditor.json  LTX2.3 R2V With TimelineEditor.json  LTX2.3 SingleSegment with TimelineEditor.json  Wan2.2 LoopSegment with TimelineEditor.json  WanScail V2 with MultiTrack.json
frontend/: .eslintrc.json  build.ts  commitlint.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/messages/: en.json  (+1 more)
modules/: __init__.py  qwen_asr.py  whisper_asr.py
nodes/: __init__.py  audio.py  basic.py  image.py  ltxv.py  video.py  wan.py
tests/: test_audio_gain.py  test_audio_merge.py  test_bernini_s2v_conditioning.py  test_easy_save_video.py  test_ltxv_make_ref_video.py  test_model_memory.py  test_models.py  test_multitrack_info_output.py  test_panorama.py  test_prompt_builder.py  test_sam3_refs_composite.py  test_speech.py  test_subtitles.py  test_timeline_prompt_override.py
utils/: __init__.py  audio.py  audio_gain.py  bernini.py  bernini_s2v.py  bernini_s2v_model_patch.py  image.py  media.py  model_memory.py  models.py  panorama.py  prompt_builder.py  prompt_override.py  speech.py  subtitles.py  video.py  替换speech.py
(+154 files in other folders)
